deploy/all.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: int

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: ds-cicd-template-backend
  namespace: int
  labels:
    app: ds-cicd-template-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ds-cicd-template-backend
  template:
    metadata:
      labels:
        app: ds-cicd-template-backend
    spec:
      containers:
      - name: ds-cicd-template-backend
        image: registry.itrcs3-app.intranet.chuv/ds-cicd-template-backend:latest
        ports:
        - containerPort: 3001
      imagePullSecrets:
      - name: registry-auth

---

apiVersion: v1
kind: Service
metadata:
  name: ds-cicd-template-backend
  namespace: int
spec:
  selector:
    app: ds-cicd-template-backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3001
  type: ClusterIP

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ds-cicd-template-backend-ingress
  namespace: int
  annotations:
    kubernetes.io/ingress.class: "public"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: 1024m
spec:
  tls:
  - hosts:
    - ds-cicd-template-backend.itrcs3-app.intranet.chuv
    secretName: ds-cicd-template-backend-tls
  rules:
  - host: ds-cicd-template-backend.itrcs3-app.intranet.chuv
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ds-cicd-template-backend
            port:
              number: 80
